update aboutme & posts

--- a/_posts/2022-01-20-blog.md
+++ b/_posts/2022-01-20-blog.md
@@ -12,7 +12,9 @@ tags: ruby
 
 <!--more-->
 
-## macos上搭建
+## macos 上本地环境搭建
+
+基本上按照这个[知乎文章](https://zhuanlan.zhihu.com/p/350462079?ivk_sa=1024320u)可以完成，需要注意ruby版本尽量升到3以上，不然mac上安装编译过程中还会有其他问题
 
 ## gem 和 gemfile
 
